# bindle

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: fixblob.yaml  release.yaml  rust.yaml
contrib/: bindle-server.service
docs/: README.md  bindle-spec.md  box-spec.md  crate-readme.md  example-events.md  file-layout.md  invoice-spec.md  keyring-protocol-spec.md  label-spec.md  parcel-spec.md  protocol-spec.md  reference-spec.md  signing-spec.md  standalone-bindle-spec.md  webassembly.md
examples/: as2bindle.rs  cargo2bindle.rs  client.rs
src/: async_util.rs  id.rs  lib.rs  main.rs  search.rs  storage.rs  stream_util.rs
src/authn/: always.rs  github.rs  http_basic.rs  mod.rs  oidc.rs  tls.rs
src/authn/always/: mod.rs
src/authn/noop/: mod.rs
src/authz/: always.rs  anonymous_get.rs  mod.rs
src/authz/always/: mod.rs
src/authz/noop/: mod.rs
src/cache/: dumb.rs  lru.rs  mod.rs
src/client/: error.rs  load.rs  mod.rs  tokens.rs
src/events/: defaultsink.rs  filesink.rs  mod.rs
src/filters/: mod.rs
src/invoice/: api.rs  bindle_spec.rs  condition.rs  group.rs  label.rs  mod.rs  parcel.rs  sealed.rs  signature.rs  verification.rs
src/provider/: embedded.rs  mod.rs  test_common.rs
src/provider/file/: mod.rs
src/proxy/: mod.rs
src/search/: mod.rs  noop.rs  strict.rs
src/server/: filters.rs  handlers.rs  mod.rs  reply.rs  routes.rs  stream_util.rs
src/standalone/: mod.rs
src/storage/: mod.rs  test_common.rs
src/storage/file/: mod.rs
src/testing/: mod.rs
test/data/: alt-format-invoice.toml  full-invoice.toml  htpasswd  secret_keys.toml  simple-invoice.toml
test/data/standalone/1927aefa8fdc8327499e918300e2e49ecb271321530cc5881fcd069ca8372dcd/: invoice.toml
tests/: cli.rs  client.rs  proxy.rs  standalone.rs  test_util.rs  v1_api.rs
tests/common/: mod.rs
tests/scaffolds/: README.md
tests/scaffolds/incomplete/: invoice.toml
tests/scaffolds/invalid/: invoice.toml
tests/scaffolds/invalid/parcels/: invalid_sha.toml  missing.toml
tests/scaffolds/keys/: keyring.toml
tests/scaffolds/lotsa_parcels/: invoice.toml
tests/scaffolds/lotsa_parcels/parcels/: barrel.toml  crate.toml
tests/scaffolds/valid_v1/: invoice.toml
tests/scaffolds/valid_v1/parcels/: parcel.toml
tests/scaffolds/valid_v2/: invoice.toml
tests/scaffolds/valid_v2/parcels/: parcel.toml
