[package]
name = "bindle"
version = "0.8.2"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>"
]
edition = "2021"
license-file = "LICENSE.txt"
description = "An aggregate object storage system for applications"
repository = "https://github.com/deislabs/bindle"
readme = "docs/crate-readme.md"
keywords = [
    "storage",
    "package",
]
exclude = [
    "docs/*",
    ".github/*",
    ".gitignore",
    "bin/",
    "test/"
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["server", "client", "caching", "test-tools"]
server = ["warp", "openid"]
client = ["mime_guess", "dirs", "time"]
caching = []
test-tools = []
cli = ["clap", "tracing-subscriber", "atty"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.44"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
sha2 = "0.10"
thiserror = "1.0.29"
semver = { version = "1.0.4", features = ["serde"] }
tokio = { version = "1.11.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["io", "codec"] }
tokio-stream = { version = "0.1.7", features = ["fs"] }
warp = { version = "0.3", features = ["tls"], optional = true }
bytes = "1.1.0"
async-trait = "0.1.51"
futures = "0.3.17"
clap = { version = "3", features = ["derive", "env", "cargo"], optional = true }
reqwest = { version = "0.11.4", features = ["stream"] }
hyper = "0.14.12"
url = "2.2.2"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"], optional = true }
dirs = { version = "4.0.0", optional = true }
mime_guess = { version = "2.0.3", optional = true }
lru = "0.7"
# We need the older version of rand for dalek
rand = "0.7"
ed25519-dalek = "1.0.1"
base64 = "0.13.0"
tracing = { version = "0.1.27", features = ["log"] }
tracing-futures = "0.2.5"
mime = "0.3.16"
sled = "0.34.7"
serde_cbor = "0.11.2"
oauth2 = { version = "4.1.0", features = ["reqwest"] }
jsonwebtoken = "8.0.0-beta.6"
openid = { version = "0.9.3", optional = true }
bcrypt = "0.10.1"
either = "1.6.1"
time = { version = "0.3", features = ["serde"], optional = true }
atty = {version = "0.2", optional = true}
async-compression = { version = "0.3", default-features = false, features = ["tokio", "gzip"]}
tokio-tar = "0.3"

# NOTE: This is a workaround due to a dependency issue in oauth2: https://github.com/tkaitchuck/ahash/issues/95#issuecomment-903560879
indexmap = "~1.6.2"

[dev-dependencies]
rstest = "0.12.0"

[[bin]]
name = "bindle-server"
path = "bin/server.rs"
required-features = ["cli"]

[[bin]]
name = "bindle"
path = "bin/client/main.rs"
required-features = ["cli"]
